--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -6,11 +6,13 @@
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    ;
+    
     box-shadow: 0 2px 1px #ccc;
     margin: auto;
     padding: 10px 0;
     overflow: hidden;
+    position: absolute; /* Keeps */
+    bottom: 5px;
 }
 
 .OrderButton {
