--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,7 +1,7 @@
 .Burger {
     width: 100%;
-    margin: auto;
-    height: 400px;
+    margin: 0 auto 1px auto;
+    height: 200px;
     overflow-x: hidden;
     overflow-y: scroll;
     text-align: center;
@@ -14,6 +14,48 @@
     /* remove scrollbar space */
     background: transparent;
     /* optional: just make scrollbar invisible */
+}
+
+@media (min-width: 300px) and (min-height: 400px) {
+    .Burger {
+        width: 300px;
+        height: 200px;
+    }
+}
+
+@media (min-width: 300px) and (min-height: 500px) {
+    .Burger {
+        width: 300px;
+        height: 150px;
+    }
+}
+
+@media (min-width: 300px) and (min-height: 600px) {
+    .Burger {
+        width: 300px;
+        height: 220px;
+    }
+}
+
+@media (min-width: 300px) and (min-height: 800px) {
+    .Burger {
+        width: 300px;
+        height: 370px;
+    }
+}
+
+@media (min-width: 400px) and (min-height: 700px) {
+    .Burger {
+        width: 350px;
+        height: 300px;
+    }
+}
+
+@media (min-width: 400px) and (min-height: 800px) {
+    .Burger {
+        width: 370px;
+        height: 390px;
+    }
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
@@ -30,9 +72,30 @@
     }
 }
 
+@media (min-width: 700px) and (min-height: 1000px) {
+    .Burger {
+        width: 450px;
+        height: 590px;
+    }
+}
+
+@media (min-width: 800px) and (min-height: 1000px) {
+    .Burger {
+        width: 700px;
+        height: 800px;
+    }
+}
+
 @media (min-width: 1000px) and (min-height: 700px) {
     .Burger {
         width: 500px;
         height: 500px;
+    }
+}
+
+@media (min-width: 1000px) and (min-height: 1300px) {
+    .Burger {
+        width: 900px;
+        height: 930px;
     }
 }
