Updated Styles: - Burger - Burger Controls

--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.css
@@ -12,6 +12,7 @@
     margin: 0 5px;
     width: 80px;
     border: 1px solid #AA6817;
+    background-color: #cf8f2e;
     cursor: pointer;
     outline: none;
 }
@@ -35,7 +36,7 @@
     width: 80px;
 }
 
-.BuildControl .Less {  
+.BuildControl .Less {
     background-color: #D39952;
     color: white;
 }
@@ -45,12 +46,14 @@
     color: white;
 }
 
-.BuildControl .Less:hover, .BuildControl .Less:active {  
+.BuildControl .Less:hover,
+.BuildControl .Less:active {
     background-color: #DAA972;
     color: white;
 }
 
-.BuildControl .More:hover,.BuildControl .More:active {
+.BuildControl .More:hover,
+.BuildControl .More:active {
     background-color: #99703F;
     color: white;
 }
