--- a/src/components/Navigation/Footer/Footer.css
+++ b/src/components/Navigation/Footer/Footer.css
@@ -2,6 +2,6 @@
     height: 5px;
     background-color: #703b09;
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
