--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,7 +1,10 @@
 .Input {    
     width: 100%;
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
     box-sizing: border-box;
+    height: 60px;
+    line-height: 1.75;
+    margin: 0px 0px 5px 0px;
 }
 
 .Label {
@@ -15,9 +18,12 @@
     border: 1px solid #ccc;
     background-color: white;
     font: inherit;
+    font-size: 1.2em;
+    line-height: 1.75;
     padding: 6px 10px;
     display: block;
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
 }
 
@@ -28,7 +34,7 @@
 
 .Invalid {
     border: 1px solid red;
-    background-color: #fda49a
+    background-color: #fda49a;
 }
 
 .ValidationError {
