--- a/src/containers/Checkout/ContactData/ContactData.css
+++ b/src/containers/Checkout/ContactData/ContactData.css
@@ -1,6 +1,8 @@
 .ContactData {
-    margin: 20px auto;
+    margin: 20px auto 0px auto;
     width: 80%;
+    min-height: 500px;
+    height: auto;
     text-align: center;
     box-shadow: 0 2px 3px #ccc;
     border: 1px solid #eee;
