--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -12,7 +12,15 @@
     transition: all 0.3s ease-out;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 300px) and (min-height: 500px) {
+    .Modal {
+        width: 300px;
+        left: calc(50% - 150px);
+        top: 15%;
+    }
+}
+
+@media (min-width: 600px) and (min-height: 501px) {
     .Modal {
         width: 500px;
         left: calc(50% - 250px);
