--- a/src/containers/Checkout/ContactData/ContactData.css
+++ b/src/containers/Checkout/ContactData/ContactData.css
@@ -1,4 +1,8 @@
 .ContactData {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     margin: 20px auto 0px auto;
     width: 80%;
     min-height: 500px;
@@ -8,6 +12,10 @@
     border: 1px solid #eee;
     padding: 10px;
     box-sizing: border-box;
+}
+
+.form {
+    width: 100%;
 }
 
 @media (min-width: 500px) {
