--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -1,58 +1,84 @@
-.BuildControls {
-    width: 100%;
-    background-color: #cf8f2e;
-    /* background-color: #FFC72C; */
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
+    .BuildControls {
+        width: 100%;
+        background-image: url('../../../assets/images/redWood.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        border-top: 3px solid #000000;
+        display: flex;
+        padding: 0px 0px 5px 0px;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        box-shadow: 0 2px 1px #ccc;
+        margin: auto;
+        overflow: hidden;
+        position: absolute;
+        /* Keeps */
+        bottom: 5px;
+    }
     
-    box-shadow: 0 2px 1px #ccc;
-    margin: auto;
-    padding: 10px 0;
-    overflow: hidden;
-    position: absolute; /* Keeps */
-    bottom: 5px;
-}
-
-.OrderButton {
-    background-color: #DAD735;
-    outline: none;
-    cursor: pointer;
-    border: 1px solid #966909;
-    color: #966909;
-    font-family: inherit;
-    font-size: 1.2em;
-    padding: 15px 30px;
-    box-shadow: 2px 2px 2px #966909;
-}
-
-.OrderButton:hover,
-.OrderButton:active {
-    background-color: #A0DB41;
-    border: 1px solid #966909;
-    color: #966909;
-}
-
-.OrderButton:disabled {
-    background-color: #C7C6C6;
-    cursor: not-allowed;
-    border: 1px solid #ccc;
-    color: #888888;
-}
-
-.OrderButton:not(:disabled) {
-    animation: enable 0.3s linear;
-}
-
-@keyframes enable {
-    0% {
-        transform: scale(1);
+    .BuildControlsInner {
+        position: relative;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #FFFFFF;
+        border-radius: 20px;
+        height: 100%;
+        width: 500px;
+        padding: 10px;
+        margin: 0;
+        bottom: 0px;
     }
-    60% {
-        transform: scale(1.1);
+    
+    .OrderButton {
+        /* background-color: #DAD735; */
+        background-color: #A3080C;
+        ;
+        outline: none;
+        cursor: pointer;
+        border: 1px solid #966909;
+        color: #966909;
+        font-family: inherit;
+        font-size: 1.2em;
+        padding: 15px 30px;
+        box-shadow: 2px 2px 2px #966909;
     }
-    100% {
-        transform: scale(1);
+    
+    .OrderButton:hover,
+    .OrderButton:active {
+        background-color: #A0DB41;
+        border: 1px solid #966909;
+        color: #966909;
     }
-}
+    
+    .OrderButton:disabled {
+        background-color: #C7C6C6;
+        cursor: not-allowed;
+        border: 1px solid #ccc;
+        color: #888888;
+    }
+    
+    .OrderButton:not(:disabled) {
+        animation: enable 0.3s linear;
+    }
+    
+    @media screen and (max-width:800px) {
+        .BuildControlsInner {
+            width: 100%;
+        }
+    }
+    
+    @keyframes enable {
+        0% {
+            transform: scale(1);
+        }
+        60% {
+            transform: scale(1.1);
+        }
+        100% {
+            transform: scale(1);
+        }
+    }
