--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -6,7 +6,8 @@
 }
 
 .NavigationItem a {
-    color: #8F5C2C;
+    /* color: #8F5C2C; */
+    color: #A3080C;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
@@ -16,7 +17,8 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    color: #40a4c8;
+    /* color: #40a4c8; */
+    color: #000000;
 }
 
 @media (min-width: 500px) {
@@ -27,19 +29,19 @@
         width: auto;
         align-items: center;
     }
-    
     .NavigationItem a {
         color: white;
         height: 100%;
         padding: 16px 10px;
         border-bottom: 4px solid transparent;
     }
-    
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: #8F5C2C;
-        border-bottom: 4px solid #40A4C8;
+        /* background-color: #8F5C2C; */
+        /* border-bottom: 4px solid #40A4C8; */
+        background-color: #A3080C;
+        border-bottom: 4px solid #000000;
         color: white;
     }
 }
