--- a/src/containers/Checkout/ContactData/ContactData.css
+++ b/src/containers/Checkout/ContactData/ContactData.css
@@ -12,6 +12,7 @@
     border: 1px solid #eee;
     padding: 10px;
     box-sizing: border-box;
+    background-color: rgba(255,255,255,0.9);
 }
 
 .form {
