--- a/src/containers/Orders/Orders.css
+++ b/src/containers/Orders/Orders.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow-y: scroll;
 }
 
 @media (min-width: 300px) and (min-height: 400px) {
