--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,8 +1,11 @@
 .Content {
-    margin-top: 72px;
+    padding-top: 72px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
-
+    justify-content: flex-start;
+    background-image: url('../../assets/images/burgerBackground.jpg');
+    background-size: cover;
+    background-repeat: repeat;
+    height: 100vh;
 }
