--- a/src/containers/Checkout/ContactData/ContactData.css
+++ b/src/containers/Checkout/ContactData/ContactData.css
@@ -10,17 +10,61 @@
     text-align: center;
     box-shadow: 0 2px 3px #ccc;
     border: 1px solid #eee;
+    border-radius: 1em;
     padding: 10px;
     box-sizing: border-box;
-    background-color: rgba(255,255,255,0.9);
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .form {
     width: 100%;
 }
 
+@media (max-width: 300px) {
+    .ContactData {
+        width: 100%;
+    }
+}
+
+@media (min-width: 300px) {
+    .ContactData {
+        width: 300px;
+    }
+}
+
+@media (min-width: 400px) {
+    .ContactData {
+        width: 350px;
+    }
+}
+
 @media (min-width: 500px) {
+    .ContactData {
+        width: 450px;
+    }
+}
+
+@media (min-width: 1000px) {
     .ContactData {
         width: 500px;
     }
 }
+
+@media (min-width: 1200px) {
+    .ContactData {
+        width: 600px;
+    }
+}
+
+
+/* @media (max-width: 500px) {
+    .ContactData {
+        width: 500px;
+    }
+}
+
+@media (max-width: 500px) {
+    .ContactData {
+        width: 500px;
+    }
+} */
