--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.css
@@ -1,4 +1,5 @@
 .BreadBottom {
+    min-height: 13%;
     height: 13%;
     width: 80%;
     background: linear-gradient(#F08E4A, #e27b36);
@@ -8,6 +9,7 @@
 }
 
 .BreadTop {
+    min-height: 20%;
     height: 20%;
     width: 80%;
     background: linear-gradient(#bc581e, #e27b36);
@@ -18,6 +20,7 @@
 }
 
 .Seeds1 {
+    min-height: 10%;
     width: 10%;
     height: 15%;
     position: absolute;
@@ -40,8 +43,8 @@
     border-radius: 40%;
     transform: rotate(60deg);
     box-shadow: inset -1px 2px #c9c9c9;
-  }
-  
+}
+
 .Seeds1:before {
     content: "";
     width: 100%;
@@ -53,9 +56,9 @@
     border-radius: 40%;
     transform: rotate(60deg);
     box-shadow: inset -1px -3px #c9c9c9;
-  }
+}
 
-  .Seeds2 {
+.Seeds2 {
     width: 10%;
     height: 15%;
     position: absolute;
@@ -65,9 +68,9 @@
     border-radius: 40%;
     transform: rotate(10deg);
     box-shadow: inset -3px 0 #c9c9c9;
-  }
-  
-  .Seeds2:before {
+}
+
+.Seeds2:before {
     content: "";
     width: 100%;
     height: 100%;
@@ -78,10 +81,10 @@
     border-radius: 40%;
     transform: rotate(90deg);
     box-shadow: inset 1px 3px #c9c9c9;
-  }
-  
+}
 
 .Meat {
+    min-height: 8%;
     width: 80%;
     height: 8%;
     background: linear-gradient(#7f3608, #702e05);
@@ -91,6 +94,7 @@
 
 .Cheese {
     width: 90%;
+    min-height: 4.5%;
     height: 4.5%;
     margin: 2% auto;
     background: linear-gradient(#f4d004, #d6bb22);
@@ -98,6 +102,7 @@
 }
 
 .Salad {
+    min-height: 7%;
     width: 85%;
     height: 7%;
     margin: 2% auto;
@@ -106,6 +111,7 @@
 }
 
 .Bacon {
+    min-height: 3%;
     width: 80%;
     height: 3%;
     background: linear-gradient(#bf3813, #c45e38);
